gccida/g0/dead_or_set_regno_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_regno_p/src/rtlanal.c:2195:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pattern = ( rtx)insn[2]; 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_regno_p/src/rtlanal.c:2197:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pattern = ( rtx)pattern[1]; 
                ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_regno_p/src/rtlanal.c:2251:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)dest + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_regno_p/src/rtlanal.c:2252:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)dest + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_regno_p/src/rtlanal.c:2281:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
body = ( rtx)body[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_regno_p/src/rtlanal.c:2325:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v23 = mode_class_0[*( ( unsigned __int8 *)dest_0 + 2)] == MODE_COMPLEX_INT 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_regno_p/src/rtlanal.c:2326:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)dest_0 + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dead_or_set_regno_p/src/obj/rtlanal.o] Error 1
